--- a/src/app/app/navbar/logo/logo.css
+++ b/src/app/app/navbar/logo/logo.css
@@ -25,7 +25,7 @@
 
 .app-name {
   color: white;
-  font-size: 28px;
+  font-size: 32px;
   font-weight: 700;
   letter-spacing: 1px;
   font-family: 'Inter', sans-serif;
